Fixing homepage overflowing styling

--- a/src/templates/index-page.scss
+++ b/src/templates/index-page.scss
@@ -6,12 +6,12 @@
 
 .landing-content {
   position: relative;
-  height: 100vh;
-  width: calc(100vw-2rem);
+  height: calc(100vh - 2rem);
+  width: calc(100vw - 1rem);
 
   margin-bottom: 1rem;
 
-  padding: 1rem;
+  padding: 1rem 0;
 
   border-radius: 0 0 $border-radius $border-radius;
 
